--- a/src/index.css
+++ b/src/index.css
@@ -139,5 +139,7 @@ padding: 0;
   background-color: #6a1b9a;
 }
 .collection-item {
-  text-overflow: ellipsis; white-space: nowrap; overflow: hidden;
+  text-overflow: ellipsis !important;
+   white-space: nowrap !important; 
+   overflow: hidden !important;
 }
