added alert on btn in basket

--- a/src/index.css
+++ b/src/index.css
@@ -138,7 +138,7 @@ padding: 0;
 .toast{
   background-color: #6a1b9a;
 }
-.collection-item {
+.collection-item span{
   text-overflow: ellipsis !important;
    white-space: nowrap !important; 
    overflow: hidden !important;
