styles collection-item

--- a/src/index.css
+++ b/src/index.css
@@ -139,15 +139,10 @@ padding: 0;
   background-color: #6a1b9a;
 }
 .collection-item span{
-  display: flex;
-  max-width: 240px;
+  max-width: 300px;
   display: inline-block;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-}
-.collection-item {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  vertical-align: middle;
 }
